--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   <body>
     <h1>Synonym Cloud</h1>
     <main>
-      <form action="/result" method="get">
+      <form action="" method="get">
         <input placeholder="Enter a hashtag" required name="word" />
         <button>Search</button>
       </form>
