feat(css): Style h1

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <h1>Synonym Cloud</h1>
     <main>
       <form action="" method="get">
-        <input placeholder="Enter a hashtag" required name="word" />
+        <input placeholder="Enter a word" required name="word" />
         <button>Search</button>
       </form>
       <div>Here goes the cloud image</div>
